--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ subprojects {
 
     dependencies {
         api(group: 'org.georegression', name: 'georegression', version: '0.24-SNAPSHOT')
-        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.20-SNAPSHOT')
+        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.20')
 
         api group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
 
