--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,6 +19,10 @@ jobs:
       with:
         fetch-depth: 0
         submodules: true
+    - name: Set up JDK 15
+      uses: actions/setup-java@v1
+      with:
+        java-version: 15
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Test Spotless
