--- a/integration/boofcv-android/examples/video/app/build.gradle
+++ b/integration/boofcv-android/examples/video/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
-    api fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
