--- a/integration/boofcv-android/examples/video/app/src/main/AndroidManifest.xml
+++ b/integration/boofcv-android/examples/video/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.boofcv.video">
 
@@ -30,8 +31,5 @@
         <activity android:name=".ExposureActivity"/>
         <activity android:name=".QrCodeActivity"/>
         <activity android:name=".BitmapActivity"/>
-
     </application>
-
-
 </manifest>
