--- a/integration/boofcv-android/examples/video/build.gradle
+++ b/integration/boofcv-android/examples/video/build.gradle
@@ -1,16 +1,15 @@
 buildscript {
     repositories {
-        google()
-        jmaven {
+        mavenLocal()
+        mavenCentral()
+        maven {  url = "https://oss.sonatype.org/content/repositories/snapshots/"  }
+        maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots'
-        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,13 +19,11 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
-        google()
+        mavenCentral()
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots'  }
         maven {
             url 'https://maven.google.com/'
             name 'Google'
-        }
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots'
         }
     }
 }
