--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ allprojects {
     apply plugin: 'com.peterabeles.gversion'
 
     group = 'org.boofcv'
-    version = '0.38'
+    version = '0.39-SNAPSHOT'
 
     ext.COMMONS_IO_VERSION = '2.6'
 
