--- a/integration/boofcv-kotlin/build.gradle
+++ b/integration/boofcv-kotlin/build.gradle
@@ -14,7 +14,7 @@ configurations {
 	[annotationProcessor, testAnnotationProcessor].each {
 		it.resolutionStrategy.force 'com.google.code.findbugs:jsr305:3.0.2'
 		it.resolutionStrategy.force "com.google.errorprone:error_prone_annotations:2.4.0"
-		it.resolutionStrategy.force "com.google.guava:guava:27.0.1-jre"
+		it.resolutionStrategy.force "com.google.guava:guava:$project.guava_version"
 		it.resolutionStrategy.force "org.checkerframework:checker-qual:2.10.0"
 	}
 }
