--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ allprojects {
 
 project.ext.set("deepboof_version", '0.5.1')
 project.ext.set("lombok_version", '1.18.20')
-project.ext.set("errorprone_version", '2.7.1')
+project.ext.set("errorprone_version", '2.9.0')
 project.ext.set("jabel_version", '0.3.0')
 project.ext.set("guava_version", '30.1.1-jre')
 
@@ -182,9 +182,22 @@ subprojects {
                 "CatchAndPrintStackTrace", // Should clean up, but done too often right now
                 "UnnecessaryParentheses", // Log SPAM due to JDK-14 Error Prone BUG
                 "SameNameButDifferent", // Lombok confuses it
-                "MissingSummary", "UnescapedEntity", "EmptyBlockTag")
+//                "MissingSummary", // This should be an error, but so many classes are non-compliant
+                "UnescapedEntity", "EmptyBlockTag")
         options.errorprone.error("MissingOverride", "MissingCasesInEnumSwitch", "BadInstanceof",
                 "PublicConstructorForAbstractClass", "NarrowingCompoundAssignment", "JdkObsolete")
+
+        // Gradually bring this inspection in to compliance
+        if (!project.getName().contains("boofcv-types")) {
+            options.errorprone.disable("MissingSummary")
+        } else {
+            options.errorprone.error("MissingSummary")
+        }
+
+        // Disable in third party code
+        if (project.getName().contains("ffmpeg")) {
+            options.errorprone.enabled = false
+        }
 
         if (name.startsWith("compileTest")) {
             options.errorprone.disable("IntLongMath", "ClassCanBeStatic", "UnnecessaryParentheses")
