--- a/main/checks/build.gradle
+++ b/main/checks/build.gradle
@@ -14,4 +14,30 @@ dependencies {
 	testImplementation project(':main:boofcv-simulation').sourceSets.test.output
 	testImplementation project(':main:boofcv-types').sourceSets.test.output
 	testImplementation project(':integration:boofcv-swing')
+
+	runtime project(':main:boofcv-feature').sourceSets.benchmark.output
+	runtime project(':main:boofcv-geo').sourceSets.benchmark.output
+	runtime project(':main:boofcv-io').sourceSets.benchmark.output
+	runtime project(':main:boofcv-ip').sourceSets.benchmark.output
+	runtime project(':main:boofcv-ip-multiview').sourceSets.benchmark.output
+	runtime project(':main:boofcv-learning').sourceSets.benchmark.output
+	runtime project(':main:boofcv-recognition').sourceSets.benchmark.output
+	runtime project(':main:boofcv-reconstruction').sourceSets.benchmark.output
+	runtime project(':main:boofcv-sfm').sourceSets.benchmark.output
+
+	implementation group: 'com.peterabeles', name: 'regression', version: auto64to32_version
+	implementation group: 'com.peterabeles', name: 'language', version: auto64to32_version
+}
+
+// Run the regression using a gradle command
+// Currently this is the only way to get paths set up for benchmarks. See comment below.
+//
+// Example: ./gradlew runtimeRegression run --console=plain -Dexec.args="--SummaryOnly"
+task runtimeRegression(type: JavaExec) {
+	dependsOn build
+	group = "Execution"
+	description = "Run the mainClass from the output jar in classpath with ExecTask"
+	classpath = sourceSets.main.runtimeClasspath
+	main = "boofcv.regression.BoofCVRuntimeRegressionApp"
+	args System.getProperty("exec.args", "").split()
 }
