--- a/main/checks/build.gradle
+++ b/main/checks/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	runtime project(':main:boofcv-recognition').sourceSets.benchmark.output
 	runtime project(':main:boofcv-reconstruction').sourceSets.benchmark.output
 	runtime project(':main:boofcv-sfm').sourceSets.benchmark.output
+	runtime project(':integration:boofcv-ffmpeg') // one test decodes a mp4
 
 	implementation group: 'com.peterabeles', name: 'regression', version: auto64to32_version
 	implementation group: 'com.peterabeles', name: 'language', version: auto64to32_version
