--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ allprojects {
     apply plugin: 'com.peterabeles.gversion'
 
     group = 'org.boofcv'
-    version = '0.39.1-SNAPSHOT'
+    version = '0.39.1'
 
     ext.build_java11 = false // IntelliJ has issues when this is set to true
 
