--- a/main/boofcv-types/build.gradle
+++ b/main/boofcv-types/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-	implementation project.sourceSets.noauto.compileClasspath
+	compileOnly project.sourceSets.noauto.compileClasspath
 	implementation project.sourceSets.noauto.runtimeClasspath
 }
